2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: BaseDirectory can't be used until the project
	  has been saved. Fixes bug 393945 - Can not create new C Binding
	  project.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Show build options in the build section.
	* Project/CProjectConfiguration.cs: Fix nullref. Fixes bug #393422.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProjectServiceExtension.cs, Project/CProject.cs,
	  Compiler/CCompiler.cs, Compiler/ICompiler.cs,
	  Compiler/GNUCompiler.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OutputOptionsPanel.cs, Gui/EditPackagesDialog.cs,
	  Gui/CodeGenerationPanel.cs, Gui/CompilerPanel.cs,
	  CBinding.addin.xml, ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  ProjectPad/ProjectPackageNodeBuilder.cs, CBinding.mdp,
	  Parser/TagDatabaseManager.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Project/CProjectConfiguration.cs, Project/CProjectBinding.cs,
	  Project/CProjectServiceExtension.cs, Project/CProject.cs,
	  gtk-gui/gui.stetic, Compiler/GNUCompiler.cs: New project model
	  changes.

2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 

	* CBinding.addin.xml: Set "isText" attribute on the mimetype
	  definitions.

2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 
