@@ -1,0 +1,25 @@
+<SerializationMap>
+	<DataItem class = "CBinding.CProject">
+		<ItemProperty member="compiler_manager" name="compiler" valueType="CBinding.CCompiler"/>
+		<ItemProperty member="language" />
+		<ItemProperty member="target" name="Target"/>
+		<ItemProperty member="Packages" />
+	</DataItem>
+	<DataItem class = "CBinding.CProjectConfiguration">
+		<ItemProperty member="output" name="Output/output"/>
+		<ItemProperty member="target" name="Build/target"/>
+		<ItemProperty member="includes" name="Includes"/>
+		<ItemProperty member="includes" scope="1" name="Include" valueType="System.String"/>
+		<ItemProperty member="libpaths" name="LibPaths"/>
+		<ItemProperty member="libpaths" scope="1" name="LibPath" valueType="System.String"/>
+		<ItemProperty member="warning_level" name="CodeGeneration/WarningLevel"/>
+		<ItemProperty member="warnings_as_errors" name="CodeGeneration/WarningsAsErrors"/>
+		<ItemProperty member="optimization" name="CodeGeneration/OptimizationLevel"/>
+		<ItemProperty member="extra_compiler_args" name="CodeGeneration/ExtraCompilerArguments"/>
+		<ItemProperty member="extra_linker_args" name="CodeGeneration/ExtraLinkerArguments"/>
+		<ItemProperty member="define_symbols" name="CodeGeneration/DefineSymbols"/>
+		<ItemProperty member="source_directory_path" name="SourceDirectory" serializationDataType="MonoDevelop.Projects.PathDataType"/>
+		<ItemProperty member="use_ccache" name="UseCcache" defaultValue="false"/>
+		<ItemProperty member="precompileHeaders" name="PrecompileHeaders" defaultValue="true"/>
+	</DataItem>
+</SerializationMap>
